<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="30dip"
    android:orientation="horizontal" >
   <LinearLayout 
	    android:orientation="vertical"
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent"
		android:layout_gravity="center">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_gravity="center"
			android:text="@string/single_player_title" 
			android:layout_marginBottom="25dip"
			android:textSize="20.0sp" 
			android:textColor="@color/red_color" />

		<Button android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:text="@string/time_trial_label"
			android:textSize="20.0sp"
			android:id="@+id/time_trial_button" />
		<Button android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:text="@string/survival_label"
			android:textSize="20.0sp"
			android:id="@+id/survival_button" />
		<Button android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:text="@string/leaderboard_label"
			android:textSize="20.0sp"
			android:id="@+id/leaderboard_button" />
		<Button android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:text="@string/play_label"
			android:textSize="20.0sp"
			android:id="@+id/play_button" />
		<Button android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:text="@string/exit_label"
			android:textSize="20.0sp"
			android:id="@+id/exit_button" />
	</LinearLayout>

</LinearLayout>