<?xml version="1.0" encoding="utf-8" ?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:padding="30dip" 
	android:orientation="horizontal">
	<LinearLayout 
	    android:orientation="vertical"
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent"
		android:layout_gravity="center">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_gravity="center"
			android:text="T U T" 
			android:layout_marginBottom="25dip"
			android:textSize="30.0sp" 
			android:textColor="@color/red_color" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_gravity="center"
			android:text="@string/main_title" 
			android:layout_marginBottom="25dip"
			android:textSize="20.0sp" 
			android:textColor="@color/red_color" />

		<Button android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:text="@string/single_player_label"
			android:textSize="20.0sp"
			android:id="@+id/single_player_button" />
		<Button android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:text="@string/multiplayer_label"
			android:textSize="20.0sp"
			android:id="@+id/multiplayer_button" />
		<Button android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:text="@string/create_label"
			android:textSize="20.0sp"
			android:id="@+id/create_button" />
		<Button android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:text="@string/exit_label"
			android:textSize="20.0sp"
			android:id="@+id/exit_button" />
	</LinearLayout>
</LinearLayout>